--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dotted_border: ^2.1.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
